--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
     <script src="js/directives/slickDirective.js"></script>
     <script src="js/directives/textDirective.js"></script>
 	<script src="js/directives/whoDirective.js"></script>
+	<script src="js/directives/specialityDirective.js"></script>
+	<script src="js/directives/contactDirective.js"></script>
 
     <!-- services -->
 
     <script src="js/services/textService.js"></script>
 	<script src="js/services/whoService.js"></script>
+	<script src="js/services/specialityService.js"></script>
+	<script src="js/services/contactService.js"></script>
 
     <!-- Angular route file -->
     <script src="app.route.js"></script>
